@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.2-6
-Date: 2009-2-26
+Version: 1.2-7
+Date: 2009-3-1
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
